--- a/settings.json
+++ b/settings.json
@@ -16,15 +16,16 @@
         "direction": [ -0.95, -0.65, -1.73 ],
         "color": [ 1.0, 1.0, 1.0],
         "intensity": 1.6,
+        "ambient_light" : 0.0,
 
         "shadow_map": {
-            "enabled": true,
-            "map_resolution": 1024,
-            "bias": 0.0005,
-            "normal_bias": 0.0015,
-            "near": 1.0,
-            "far": 4000.0,
-            "ortho_size": 30.0
+            "map_resolution": 2048,
+            "bias": 0.0033,
+            "normal_bias": 0.3913,
+            "near": 100.0,
+            "far": 500.0,
+            "half": 500.0,
+            "distance" : 300
         }
     },
 
