--- a/settings.json
+++ b/settings.json
@@ -12,6 +12,7 @@
         },
 
         "ray_count" : 256,
+        "energy_bands" : 10,
         "max_bounces" : 100,
         "voxel_scale_meters" : 0.1,
         "ray_energy_min" : 0.01,
