--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
 
     "SIMULATION" : {
-        "room_dimensions" : [128, 64, 128],
+        "room_dimensions" : [32, 32, 32],
         "background_color" : [200, 200, 200, 255],
         "hide_walls" : {
             "top" : true,
@@ -11,12 +11,12 @@
             "west" : false
         },
 
-        "ray_count" : 1,
+        "ray_count" : 10000,
         "energy_bands" : 10,
-        "max_bounces" : 100,
+        "max_ray_steps" : 3000,
         "voxel_scale_meters" : 0.1,
         "ray_energy_min" : 0.0,
-        "emitter_position" : [32, 32, 64]
+        "emitter_position" : [16.5, 16.5, 16.5]
 
     },
 
