--- a/settings.json
+++ b/settings.json
@@ -11,12 +11,13 @@
             "west" : false
         },
 
-        "ray_count" : 100000,
+        "ray_count" : 1,
         "energy_bands" : 10,
-        "max_ray_steps" : 10000,
+        "max_ray_steps" : 1,
         "voxel_scale_meters" : 0.1,
         "ray_energy_min" : 0.0001,
-        "emitter_position" : [8.5, 8.5, 8.5]
+        "emitter_position" : [8.5, 8.5, 8.5],
+        "listener_position" : [16.5, 8.5, 8.5]
 
     },
 
