--- a/settings.json
+++ b/settings.json
@@ -11,13 +11,15 @@
             "west" : false
         },
 
-        "ray_count" : 1,
+        "ray_count" : 3,
         "energy_bands" : 10,
         "max_ray_steps" : 1,
         "voxel_scale_meters" : 0.1,
         "ray_energy_min" : 0.0001,
         "emitter_position" : [8.5, 8.5, 8.5],
-        "listener_position" : [16.5, 8.5, 8.5]
+        "listener_position" : [16.5, 8.5, 8.5],
+        "listener_radius" : 1
+
 
     },
 
