Added Per Frame Energy Vectors + Dynamic Precision Adjustment + Nice Playback Simulation Stopping

--- a/settings.json
+++ b/settings.json
@@ -21,11 +21,7 @@
         "emitter_position" : [8.5, 8.5, 8.5],
         "listener_position" : [20, 6, 15],
         "listener_radius" : 1.5,
-        "heatmap_sensitivity" : 3.2,
-        "unit_precision_adjustment" : 100000000,
-
-        "input_file" : "input.wav"
-
+        "heatmap_sensitivity" : 4.6
     },
 
     "LIGHTING": {
