--- a/settings.json
+++ b/settings.json
@@ -16,12 +16,41 @@
         "ray_count" : 10000,
         "energy_bands" : 10,
         "max_ray_steps" : 5000,
-        "voxel_scale_meters" : 0.1,
-        "ray_energy_min" : 0.0000000001,
+        "voxel_scale_meters" : 0.5,
+        "ray_energy_min" : 0.00001,
         "emitter_position" : [8.5, 8.5, 8.5],
-        "listener_position" : [20, 6, 15],
+        "listener_position" : [8.5, 8.5, 12.5],
         "listener_radius" : 1.5,
-        "heatmap_sensitivity" : 4.6
+        "heatmap_sensitivity" : 4.15,
+
+        "max_recursion_level" : 3,
+        "max_recursion_entries" : 12,
+
+        "band_ranges" : [
+            [22, 44], 
+            [44, 88], 
+            [88, 177], 
+            [177, 354], 
+            [354, 707],
+            [707, 1414], 
+            [1414, 2828], 
+            [2828, 5657], 
+            [5657, 11314], 
+            [11314, 22627]
+        ],
+
+        "direct_sound_interval" : 0.020,
+        "max_reflections" : 16,
+        "reflection_sample_interval" : 0.1,
+        "max_reflection_delay_seconds" : 1.0,
+        "reflection_gain_smoothing" : 0.15,
+        "reflection_delay_smoothing" : 0.15,
+        "aw_dry_smoothing" : 0.03,
+        "aw_wet_smoothing" : 0.03,
+        "ir_accumulation_decay" : 0.985,
+
+        "speed_of_sound" : 343.0
+
     },
 
     "LIGHTING": {
