--- a/settings.json
+++ b/settings.json
@@ -49,7 +49,8 @@
         "aw_wet_smoothing" : 0.03,
         "ir_accumulation_decay" : 0.985,
 
-        "speed_of_sound" : 343.0
+        "speed_of_sound" : 343.0,
+        "default_sample_rate" : 44100
 
     },
 
